<resources>
    <string name="app_name">Kalkulator Victor</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ac">AC</string>
    <string name="zero">0</string>
    <string name="open_bracket">(</string>
    <string name="closing_bracket">)</string>
    <string name="sum">+</string>
    <string name="subtract">-</string>
    <string name="multiplication">x</string>
    <string name="division">:</string>
    <string name="coma">.</string>
    <string name="equal">=</string>
</resources>